# dex-simulator

./: .gitignore  AGENTS.md  Cargo.toml  README.md
config/: default.yaml  forknet.yaml  pancake_v2_bootstrap.yaml  pancake_v3_bootstrap.yaml
crates/app/: Cargo.toml
crates/app/src/: cli.rs  main.rs  shared.rs
crates/app/src/commands/: listen.rs  mod.rs  serve.rs  simulate.rs  state.rs  utils.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  serde_utils.rs
crates/core/src/config/: mod.rs
crates/core/src/dex/: bootstrap.rs  mod.rs  router.rs  traits.rs
crates/core/src/dex/pancake_v2/: calculator.rs  event.rs  handler.rs  mod.rs  state.rs
crates/core/src/dex/pancake_v3/: calculator.rs  event.rs  handler.rs  mod.rs  state.rs
crates/core/src/event/: mod.rs  queue.rs  store.rs
crates/core/src/event/source/: ethers.rs  mod.rs
crates/core/src/event/store/: rocksdb.rs
crates/core/src/logging/: mod.rs
crates/core/src/path/: mod.rs
crates/core/src/simulation/: mod.rs
crates/core/src/state/: mod.rs  onchain.rs  repository.rs  snapshot.rs
crates/core/src/syncer/: mod.rs
crates/core/src/token_graph/: mod.rs
crates/core/src/types/: mod.rs
docs/: pancake_v3_bootstrap.md  pancake_v3_设计说明.md  开发计划.md  运行指南.md  需求_2025-10-02.md
scripts/: metric_report.sh  run_forknet_test.sh  setup_env.sh
tests/: router_integration.rs
