[workspace]
members = [
    "crates/core",
    "crates/app",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Dex Simulator Team <dev@dex-sim.local>"]
description = "本地 DEX 模拟器"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
config = "0.15.18"
ethers = { version = "2", default-features = false, features = ["rustls", "ws"] }
log = "0.4"
log4rs = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "fs", "signal"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
serde_json = "1.0.145"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
axum = { version = "0.7", features = ["json"] }
